Release: Version 2.4.1 (#384)
* Update version

* Update version

* docs(tutorial): add DocsE2E and video tests for all tutorial modes

- Moves existing GLOBAL tutorial docs tests from "Players" to the new
  "Tutorial" docs category so tutorials get their own section in the
  generated docs site
- Adds steps 4 (Run Your Show) and 5 (Enhance with AI) to
  TutorialDocsE2ETest, covering all 5 GLOBAL tutorial steps
- Adds LeagueTutorialDocsE2ETest covering all 4 League tutorial steps
- Adds CampaignTutorialDocsE2ETest covering all 3 Campaign tutorial steps
- Adds TutorialVideoDocsE2ETest with one walkthrough video per mode

Closes ATW-pebp

* Remove temporary file

* style: auto-fix Spotless/OpenRewrite formatting

* fix: resolve empty wrestler dropdown when adding team in EditSegmentDialog

getFilteredWrestlers had two inconsistent code paths: the alignment==null
path filtered a pre-cached list that bypassed force-include and could
produce empty results for a new team row. Collapsed both paths into a
single delegation to wrestlerService.findAllFiltered which applies
alignment, gender, expansion, and force-include logic consistently.

Closes ATW-zxvo

* style: auto-fix Spotless/OpenRewrite formatting

* test: add regression test for empty team dropdown in EditSegmentDialog

Exposes addTeamButton and teamCombos via @Getter so tests can verify
that clicking Add Team produces a populated wrestler combo. Also stubs
the 4-arg findAllFiltered(alignment, gender, universeId, Set) overload
in setUp to cover the code path the fix introduced.

* fix: ensure all segment wrestlers are selectable in every team combo

getFilteredWrestlers now unions all wrestlers currently selected in any
team combo into the force-include set before calling findAllFiltered.
This means wrestlers already in the segment (which may bypass expansion
filtering only via their own team's force-include) always appear as
candidates in every combo, including newly added teams.

* refactor: remove flat participan